--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
     <header>
       <div class='final'> 
         <div class="logo">
-        <img src="img/lobo.png" alt="logo">    
+        <img src="/img/lobo.png.jpeg" alt="logo">    
         <h1>--- LA CASA DEL LOBO ---</h1>
          <p>Hotel & Resort</p>
        
@@ -41,12 +41,12 @@
       <h2> Ingrese su Tarjeta</h2>
       
       <input type="password" placeholder="Digite números" id="NumeroTarj" style="width: 40%;">
-      <button  onclick="myFunction()">Validar</button>
-        <button class="btn btn-primary" type="button" onclick="mostrarTarjeta()">Mostrar</button>
+      <button  id="myFunction">Validar</button>
+        <button class="btn btn-primary" type="button" id="mostrarTarjeta">Mostrar</button>
  
       <input type="button" value="Continuar" id="back-btn" >
       <div class="logo2">
-         <img src="webpay4.jpg" alt="logo2"> 
+         <img src="/img/webpay4.jpg.jpeg" alt="logo2"> 
         </div>
       </div>
       <div id="container3"> 
