--- a/src/index.html
+++ b/src/index.html
@@ -1,65 +1,72 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8">
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Casa del Lobo</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <header>
-      <div class='final'> 
+      <div class="final">
         <div class="logo">
-        <img src="/img/lobo.png.jpeg" alt="logo">    
-        <h1>--- LA CASA DEL LOBO ---</h1>
-         <p>Hotel & Resort</p>
-       
+          <img src="/img/lobo.png" alt="logo" />
+          <h1>--- LA CASA DEL LOBO ---</h1>
+          <p>Hotel & Resort</p>
         </div>
-     </div>
-   </header>
+      </div>
+    </header>
     <main>
-      <div id="container" class="hide">
+      <!-- Primera pantalla del menú -->
+      <div id="container">
         <h2>Bienvenido Porfavor seleccione su Suite</h2>
         <label for="room">Tipo de habitación</label>
+
         <select name="room" id="p1_">
           <option value="value1">1 Cama Matrimonial</option>
           <option value="value2">2 Camas Individuales</option>
         </select>
-        <br>
+
+        <br />
         <label for="schedule">Horario</label>
         <select name="schedule" id="p2_">
           <option value="value3">12:00 PM</option>
           <option value="value4">15:00 PM</option>
         </select>
-        <br>
+
+        <br />
         <label for="date">Check-in</label>
-        <input type="date" id="start" name="date-choosen">
-        <br>
-        <input type="button" id="btn" value="Siguiente"> 
-     </div>
-    </main>
-    <div id="container2"> 
-      <h2> Ingrese su Tarjeta</h2>
-      
-      <input type="password" placeholder="Digite números" id="NumeroTarj" style="width: 40%;">
-      <button  id="myFunction">Validar</button>
-        <button class="btn btn-primary" type="button" id="mostrarTarjeta">Mostrar</button>
- 
-      <input type="button" value="Continuar" id="back-btn" >
-      <div class="logo2">
-         <img src="/img/webpay4.jpg.jpeg" alt="logo2"> 
-        </div>
+        <input type="date" id="start" name="date-choosen" />
+        <br />
+        <input type="button" id="btn" value="Siguiente" />
       </div>
-      <div id="container3"> 
-        <h3> Gracias por su preferencia</h3>
-        <h4> Su reserva a sido Validada</h4>
+    </main>
+    <!-- Segunda pantalla el validador -->
+    <div id="container2">
+      <h2>Es necesario que valide su tarjeta para continuar</h2>
+
+      <input type="password" placeholder="Digite números" id="NumeroTarj" />
+      <button type="button" class="btn btn-primary" id="mostrarTarjeta">
+        Mostrar
+      </button>
+      <button type="button" id="myFunction">Validar</button>
+
+      <br />
+      <input type="button" value="Continuar" id="back-btn" />
+    </div>
+    <!-- Tercera pantalla  -->
+    <div id="container3">
+      <h3>Gracias por su preferencia</h3>
+      <h4>Su reserva a sido Validada</h4>
+
       <h4 id="n_t"></h4>
       <h4 id="n_t1"></h4>
       <h4 id="n_t2"></h4>
       <h4 id="n_t3"></h4>
-        <input type="button" value="Finalizar" id="back-again">
-       </div>
+
+      <input type="button" value="Finalizar" id="back-again" />
+    </div>
     <footer>© Todos los derechos reservados 2020</footer>
     <script src="index.js" type="module"></script>
   </body>
 </html>
-
