--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
     <header>
       <div class="final">
         <div class="logo">
-          <img src="/img/lobo.png" alt="logo" />
+          <img src="/img/lobo.png" alt="logo" />![lobo.png](https://raw.githubusercontent.com/src/Img/lobo.png.jpeg)
           <h1>--- LA CASA DEL LOBO ---</h1>
           <p>Hotel & Resort</p>
         </div>
