--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
     <header>
       <div class="final">
         <div class="logo">
-          (https://raw.githubusercontent.com/src/Img/lobo.png.jpeg)
+          <img src="https://raw.githubusercontent.com/src/Img/lobo.png.jpeg">
           <h1>--- LA CASA DEL LOBO ---</h1>
           <p>Hotel & Resort</p>
         </div>
