--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,8 @@
     <header>
       <div class="final">
         <div class="logo">
-          <img src="https://raw.githubusercontent.com/src/Img/lobo.png.jpeg">
+          <img src="https://raw.githubusercontent.com/src/Img/lobo.png">
+          <!--![primera-idea-descartada](https://raw.githubusercontent.com/ladypino/SCL014-card-validation/master/src/Img/lobo.jpeg)-->
           <h1>--- LA CASA DEL LOBO ---</h1>
           <p>Hotel & Resort</p>
         </div>
