--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
     <header>
       <div class="final">
         <div class="logo">
-          https://github.com/Ladypino/SCL014-card-validation/blob/master/src/img/lobo.png
+          <img src= "https://github.com/Ladypino/SCL014-card-validation/blob/master/src/img/lobo.png">
          
           <h1>--- LA CASA DEL LOBO ---</h1>
           <p>Hotel & Resort</p>
