--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
       <div class="final">
         <div class="logo">
           <img src= https://github.com/Ladypino/SCL014-card-validation/blob/master/src/img/lobo.png/>
-         
+            <img src="/img/lobo.png" alt="logo" />
           <h1>--- LA CASA DEL LOBO ---</h1>
           <p>Hotel & Resort</p>
         </div>
